--- a/UserInterface/index.html
+++ b/UserInterface/index.html
@@ -9,7 +9,7 @@
 <body>
    <header>
         <div class="container"> 
-            <p>logo</p>
+            <p>logo branch 1</p>
         </div>
         <div class="container">
             <a href="" class="text">Feauture</a>
@@ -21,7 +21,7 @@
    <main class="block">
         <h1>Feauture Is Here,<br>Start Exploring Now.</h1><br><br>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas<br>perferendis corrupti numquam, inventore corporis nemo aliquam. Accusamus, dolorum.</p>
-        <br><br>
+        <br><p>Branch2</p><br>
         <button class="Get-Started">Get Started</button>
    </main>
    <picture color="picture">
